--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -7,8 +7,20 @@
     <link rel="stylesheet" href="css/demo.css">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="img/icon.jpg">
-
+ 
     <style>
+             table td {
+  word-wrap: break-word;
+  white-space: normal;  
+  overflow: hidden;     
+  text-overflow: ellipsis; 
+  max-width: 100px;   
+} 
+
+table th {
+  max-width: 100px; 
+} 
+
         .filterable { margin-top: 15px; }
         .filterable .panel-heading .pull-right { margin-top: -20px; }
         .filterable .filters input[disabled] {
@@ -20,8 +32,8 @@
             height: auto;
         }
         .filterable .filters input[disabled]::placeholder { color: #333; }
-
-        .pagination {
+ 
+        /* .pagination {
         display: flex;
         justify-content: center;
         margin-top: 20px;
@@ -36,7 +48,45 @@
       .pagination button.active {
         background-color: #af007c;
         color: white;
-      }
+      } */
+       .pagination a {
+  /* display: inline-block; */
+  margin: 1px;
+  padding: 10px;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  text-decoration: none;
+  color: #333;
+  background-color: #f1f1f1;
+  border-radius: 50%;
+  border: 1px solid #ddd;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.pagination a:hover {
+  background-color: #af007c;
+  color: white;
+}
+
+.pagination a.active {
+  background-color: #af007c;
+  color: white;
+  font-weight: bold;
+}
+
+.pagination a.prev, .pagination a.next {
+  border-radius: 0;
+  width:10px;
+  padding: 10px 15px;
+}
+
+.pagination {
+  text-align: center;
+  margin-top: 20px;
+}
+
     </style>
 </head>
 <body>
@@ -47,20 +97,16 @@
             </a>
         </div>
         <nav class="logo" style="margin-top:-80px; margin-right: 60px;">
-            <a class="dropdown-toggle" type="text" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Home <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="margin-top:-630px; margin-left: 1000px;">
-                <li><a class="dropdown-item" href="/demo">Users</a></li>
-                <li><a class="dropdown-item" href="/projects">Projects</a></li>
-                <li><a class="dropdown-item" href="/progress">Progress</a></li>
-            </ul>
+          <a href="/week" id="activityLink">Activity</a>
+          <a href="/admin" id="demoLink">Users</a>
+          <a href="/projects" id="projectLink">Projects</a>
+          <a href="/progress" id="progressLink">Progress</a>
+    
+          <a href="/login" id="logout-link">Logout</a>
 
-            <!-- <a href="">MyProfile</a> -->
-            <a href="/login">Logout</a>
         </nav>
-    <center> <h4 style="margin-right:0px;margin-top:-50px; color: white;">ADMINISTRATOR</h4></center>
-
+    <!-- <center> <h4 style="margin-right:0px;margin-top:-50px; color: white;">ADMINISTRATOR</h4></center> -->
+ 
     </header>
     <div class="container">
         <div class="row clearfix">
@@ -81,6 +127,7 @@
                                 <th><input type="text" class="form-control" placeholder="User ID" disabled name="user_id" /></th>
                                 <th><input type="text" class="form-control" placeholder="User Name" disabled name="name"/></th>
                                 <th><input type="email" class="form-control" placeholder="E Mail" disabled name="email"/></th>
+                                <th><input type="password" class="form-control" placeholder="Password" disabled name="Password"/></th>
                                 <th><input type="text" class="form-control" placeholder="Designation" disabled name="Designation"/></th>
                                 <th><input type="text" class="form-control" placeholder="Manager" disabled name="Manager"/></th>
                                 <th><input type="text" class="form-control" placeholder="Status" disabled name="status" /></th>
@@ -92,24 +139,29 @@
                         </tbody>
                     </table>
                     <!-- Pagination controls -->
-                    
+                     
+                   
                 </div>
             </div>
         </div>
     </div>
-
-    
-    
-    <center>
-
+ 
+   
+   
+    <!-- <center>
+ 
     <div class="pagination">
         <button id="prevPage" style="padding: 7px;">Previous</button>
         <button id="nextPage"style="padding: 7px;">Next</button>
-      </div></center>
+      </div></center> -->
+     <center> <div class="pagination" id="paginationLinks">
+        <!-- Numbered links will be dynamically inserted here -->
+    </div></center>
+    
     <footer>
         <div id="copyright">&#169 ALL RIGHTS RESERVED</div>
     </footer>
-
+ 
     <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -132,30 +184,38 @@
                             <input type="email" class="form-control" id="editUserEmail" name="email">
                         </div>
                         <div class="form-group">
+                            <label for="editUserPwd">password</label>
+                            <input type="password" class="form-control" id="editUserPwd" name="email">
+                        </div>
+                        <div class="form-group">
                             <label for="editUserDesignation">Designation</label>
                             <input type="text" class="form-control" id="editUserDesignation" name="Designation">
                         </div>
                         <div class="form-group">
                             <label for="editUserManager">Manager</label>
-                            <input type="text" class="form-control" id="editUserManager" name="Manager">
+                            <!-- <input type="text" class="form-control" id="editUserManager" name="Manager"> -->
+                            <select class="form-control" id="editUserManager" name="Manager"></select>
                         </div>
                         <div class="form-group">
                             <label for="editUserStatus">Status</label>
                            
                             <select class="form-control" id="editUserStatus" name="status">
-                          
+                         
                                 <option value="2">In Active</option>
                                 <option value="1">Active</option>
-                                
+                               
                             </select>
                         </div>
                         <div class="form-group">
                             <label for="editUserrole">role</label>
                             <select class="form-control" id="editUserrole" name="role">
-                          
+                         
                                 <option value="2">user</option>
                                 <option value="1">admin</option>
-                                
+                                <option value="3">PM</option>
+
+
+                               
                             </select>
                         </div>
                     </form>
@@ -167,8 +227,8 @@
             </div>
         </div>
     </div>
-
-
+ 
+ 
     <!-- Alert Modal -->
 <div class="modal fade" id="alertModal" tabindex="-1" role="dialog" aria-labelledby="alertModalLabel">
     <div class="modal-dialog" role="document">
@@ -186,7 +246,7 @@
         </div>
     </div>
 </div>
-
+ 
 <!-- Confirmation Modal -->
 <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel">
     <div class="modal-dialog" role="document">
@@ -209,7 +269,58 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="js/admin.js"></script>
+    <script>
+  document.addEventListener("DOMContentLoaded", () => {
+            // Logout link handler
+            document.getElementById("logoutLink").addEventListener("click", (event) => {
+                event.preventDefault();
+                window.localStorage.removeItem("userID");
+                window.localStorage.removeItem("userRoleId");
+                window.location.href = event.target.href;
+            });
+
+            // Function to update the navbar based on role ID
+            function updateNavbar(roleId) {
+                const activityLink = document.getElementById("activityLink");
+                const demoLink = document.getElementById("demoLink");
+                const projectLink = document.getElementById("projectLink");
+                const progressLink = document.getElementById("progressLink");
+
+                // Hide all links initially
+                activityLink.style.display = "none";
+                demoLink.style.display = "none";
+                projectLink.style.display = "none";
+                progressLink.style.display = "none";
+
+                // Show only the activity and logout links for users
+                if (roleId === 2) {
+                    activityLink.style.display = "block";
+                } 
+                // Show all links for admins
+                else if (roleId === 1) {
+                    activityLink.style.display = "block";
+                    demoLink.style.display = "block";
+                    projectLink.style.display = "block";
+                    progressLink.style.display = "block";
+                }
+                else if (roleId===3){
+                    activityLink.style.display = "block";
+                    progressLink.style.display = "block";
+                }
+            }
+
+            // Check for stored user role and update the navbar on page load
+            const storedRoleId = localStorage.getItem("userRoleId");
+            if (storedRoleId) {
+                updateNavbar(parseInt(storedRoleId));
+            } else {
+                // Default behavior if no role ID is found
+                updateNavbar(2);  // Assuming 2 is the default role (user)
+            }
+        });
+
+    </script>
+     <script src="js/admin.js"></script>
         
 </body>
 </html>
