--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -5,15 +5,18 @@ body,
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden;
   min-height: 100vh;
+  position: relative;
 }
 header {
   background-color: #af007c;
+  width: 100%;
   font-size: 1em;
   height: 80px;
   display: flex;
   justify-content: flex-end;
-  flex: 1;
+  flex: 3;
   text-decoration: none;
+  
 }
 nav {
   float: left;
@@ -38,16 +41,15 @@ footer {
 }
 header a {
   color: white;
-  display: block;
 }
 #logo {
-  flex: 1;
+  flex: 3;
   text-decoration: none;
   font-size: 1.5em;
 }
 nav {
-  flex: 1;
-  float: left;
+  flex: 2;
+  float: right;
   display: flex;
 }
 nav a {
@@ -62,11 +64,12 @@ nav a {
   display: flex;
   justify-content: flex-start;
   display: inline-block;
-  margin-right: 600px;
+  margin-right: 800px;
   height: 80px;
   width: 80px;
   padding-top: 0;
 }
+
 body {
   /* background-image: url(../img/bg.jpg); */
   background-repeat: no-repeat;
