--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -61,7 +61,7 @@
     <nav class="logo" style="margin-top: -80px; margin-right: 60px">
       <!-- <a href="/projects">Home</a> -->
      <a href="/week" id="activityLink">Activity</a>
-      <a href="/demo" id="demoLink">Users</a>
+      <a href="/admin" id="demoLink">Users</a>
       <a href="/projects" id="projectLink">Projects</a>
       <a href="/progress" id="progressLink">Progress</a>
 
